--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DrinksCounterApp</title>
+  <title>Drinks Counter</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="description" content="Esta es una web creada para la festividad de Moros y Cristianos en Villajoyosa"/>
+  <meta name="keywords" content="Moros y Cristianos, Villajoyosa, La Vila Joiosa"/>
+  <meta name="author" content="Claudio Higón Martínez"/>
+  <meta name="language" content="es"/>
+  <meta name="robots" content="index"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
